--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="one-half column">
           <h3><span data-js="companyName"></span></h3>
           <h5><span data-js="companyDescription"></span></h5>
-          <a href="#app" class="button button-primary">Comece aqui</a>
+          <a href="#app" class="button button-accent">Comece aqui</a>
         </div>
 
         <div class="one-half column section--hero__right">
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="u-full-width u-cf">
-                    <button type="submit" class="button-primary u-pull-right">Cadastrar</button>
+                    <button type="submit" class="button button-primary u-pull-right">Cadastrar</button>
                 </div>
               </form>
             </div>
@@ -76,6 +76,7 @@
                 <th>Ano</th>
                 <th>Placa</th>
                 <th>Cor</th>
+                <th></th>
               </thead>
 
               <tbody></tbody>
