--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="section section--hero">
+  <div class="section section--hero" style="display: none;">
     <div class="container">
       <div class="row">
         <div class="one-half column">
