--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
   </div>
 
   <script src="js/dom.js" charset="utf-8"></script>
-  <script src="js/app.js" charset="utf-8"></script>
+  <script src="js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
